--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -75,7 +75,7 @@ nav a {
 
 }
 
-.banner .profile-picture {
+.banner, .profile-picture {
     width: 500px;
     justify-content: space-between;
 }
@@ -104,24 +104,95 @@ nav a {
     max-width: 500px;
 }
 
-.about{
+.about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
 }
 
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
 
-.about-info-container{
+.main section {
+    margin-top: 130px;
+}
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 
 }
 
-.about-info{
+.about-info {
     text-align: center;
+}
+
+.section-title {}
+
+#what-i-do-description {
+    padding: 30px 150px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    color: #757575;
+
+}
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+
+.resume-items-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute{
+    color:  #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.resume-container hr{
+    width: 558px;
+    background: #D1D1D1;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
